renaming RATCON and RATCON2 by respectively set_constant_rates and set_dependant_rates

--- a/nautilus_help.man
+++ b/nautilus_help.man
@@ -405,7 +405,7 @@ satol				tab(nb_species)
 NNZ
 
 
-==called in RATCON==
+==called in set_constant_rates==
 T300									TEMP/300.D+0
 TI										1.0D+00/TEMP
 TSQ										SQRT(TEMP)
@@ -417,7 +417,7 @@ TINDIF				tab(nb_species)			thermal diffusion rate (s-1)
 TINEVA				tab(nb_species)			evaporation rate (s-1)
 
 
-==called in RATCON2==
+==called in set_dependant_rates==
 TETABIS									selfshielding parameter
 TETABIS1								selfshielding factor
 TETABIS2								"
@@ -488,17 +488,17 @@ time loop (from 0 to 90% of the final time STOP_TIME)
 	spatial loop (from 1 to nptmax)
 		store abundances ZXN for a spatial point in Y and XN
 		call evolve		
-			-> call ratcon(DUMMYY)
+			-> call set_constant_rates(DUMMYY)
 			-> call get_jacobian(DUMMYY,IDUMMY,DUMMYPDJ)
 			-> call shieldingsetup
-			-> call ratcon(Y)
+			-> call set_constant_rates(Y)
 			-> call computeIAJA
 			-> call dlsodes(fchem,nb_species,y,t,tout,itol,RELATIVE_TOLERANCE,satol,itask,istate,iopt,rwork,lrw,iwork,liw,jac,mf) 
 			-> call CONSERVE(Y)
 	
 
 			-> external FCHEM
-				-> call RATCON2(Y)
+				-> call set_dependant_rates(Y)
 					-> call MODIF(J,IMOD1,IMOD2,BARR,YMOD1,YMOD2)
 				-> call FCHEMVW(N,Y,YP)
 			-> external JAC
@@ -710,7 +710,7 @@ with diffusion ZDT is set to the "smallest timescale you can think of"
 create work arrays
 
 ! If testjac is 1, print non zero elements per column of the Jacobian (Done in odes/get_jacobian)
-call ratcon(DUMMY)
+call set_constant_rates(DUMMY)
 
 
 
@@ -729,7 +729,7 @@ call shieldingsetup
 
 ! Adaptive absolute tolerance to avoid too high precision on very abundant species,
 ! H2 for instance. Helps running a bit faster
-call ratcon(Y)
+call set_constant_rates(Y)
 ! Feed IWORK with IA and JA
 call computeIAJA(Y)
 call dlsodes(fchem,nb_species,y,t,tout,itol,RELATIVE_TOLERANCE,satol,itask,istate,iopt,rwork,lrw,iwork,liw,jac,mf) 
@@ -740,7 +740,7 @@ CALL CONSERVE(Y)
 return XN=Y
 
 
-========RATCON===========================================				nautilus.f90
+========set_constant_rates===========================================				nautilus.f90
 (Y)
 !!compute the rate constants for ITYPE=0-12, 15, 16, 66 and 67
 
@@ -791,10 +791,10 @@ Livermore Solver for Ordinary Differential Equations.
 ========FCHEM============================================				nautilus.f90
 (N,T,YP)
 
-call RATCON2(Y)
+call set_dependant_rates(Y)
 call FCHEMVW(N,Y,YP)
 
-========RATCON2==========================================				nautilus.f90
+========set_dependant_rates==========================================				nautilus.f90
 (Y)
 !!compute the rate constants for ITYPE=13,14,17,18,19,20,99 including selfshielding effetcs
 
